    - res/i18n/: refresh translation files again after copyright date changes.
    - res/i18n/x2goclient_fr.ts: fixup French translation file.
    - res/i18n/x2goclient_sv.ts: fixup Swedish translation file a little bit
      and add comments/requests for re-translations for the next time.
    - macbuild.sh: switch to bundling PulseAudio 10.0 since it's now available
      in MacPorts.

  [ Bernard Cafarelli ]
  * New upstream version (4.1.0.0):
    - {res/,x2goclient.pro}: rename .rcc files to .qrc. Fixes: #1096. "rcc" is
      the extension for compiled resource files, whereas "qrc" is the mapping
      file. Qt5 stumbles upon that - i.e., it doesn't try to compile files
      with the "rcc" extension, while Qt4 did.
    - res/: fix up previous change, the renaming of changelog.qrc was not
      correctly committed.

  [ Jason Alavaliant ]
  * New upstream version (4.1.0.0):
    - src/{onmainwindow.{cpp,h},help.cpp}: modify autostart option to support
      multiple autostart apps at the same time. Fixes: #1024.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.0.0):
    - src/onmainwindow.cpp: fix SSHFS on Windows client. Fixes: #1105.

  [ Sébastien Ducoulombier ]
  * New upstream version (4.1.0.0):
    - res/i18n/x2goclient_fr.ts: update French translation file.

  [ Daniel Lindgren ]
  * New upstream version (4.1.0.0):
    - res/i18n/x2goclient_sv.ts: update Swedish translation file.

 -- X2Go Release Manager <git-admin@x2go.org>  Mon, 19 Sep 2016 09:07:07 +0200

x2goclient (4.0.5.2-0x2go1) unstable; urgency=medium

  [ Klaus Ade Johnstad ]
  * New upstream version (4.0.5.2):
    - res/i18n/x2goclient_nb_no.ts: update Bokmål (Norway) translation file.

  [ Mihai Moldovan ]
  * New upstream release (4.0.5.2):
    - res/i18n/x2goclient_nb_no.ts: fixup translation by respecting the
      original messages' format, typo fixes and other changes.
    - res/i18n/x2goclient_fi.ts: fixup translation by respecting the original